--- a/services.html
+++ b/services.html
@@ -277,6 +277,30 @@
                                 management software, and industrial automation support.</p>
                         </div>
                     </div>
+                    <!-- Education Card -->
+                    <div class="card" style="display: flex; align-items: start; gap: 1rem;">
+                        <div
+                            style="min-width: 50px; height: 50px; background: rgba(245, 158, 11, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: #f59e0b; font-size: 1.5rem;">
+                            <i class='bx bxs-graduation'></i>
+                        </div>
+                        <div>
+                            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Education</h3>
+                            <p style="color: var(--text-muted); font-size: 0.9rem;">Digital classroom infrastructure,
+                                secure student data management, and campus-wide WiFi solutions.</p>
+                        </div>
+                    </div>
+                    <!-- Logistics & Transportation Card -->
+                    <div class="card" style="display: flex; align-items: start; gap: 1rem;">
+                        <div
+                            style="min-width: 50px; height: 50px; background: rgba(99, 102, 241, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: #6366f1; font-size: 1.5rem;">
+                            <i class='bx bxs-truck'></i>
+                        </div>
+                        <div>
+                            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Logistics & Transportation</h3>
+                            <p style="color: var(--text-muted); font-size: 0.9rem;">Fleet tracking systems, warehouse
+                                management IT, and real-time delivery monitoring solutions.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -310,7 +334,8 @@
                         </ul>
                     </div>
                     <div>
-                        <img src="Assets/it-support-services.jpg" alt="IT Support Services" style="width: 100%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+                        <img src="Assets/it-support-services.jpg" alt="IT Support Services"
+                            style="width: 100%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
                     </div>
                 </div>
             </div>
@@ -321,7 +346,8 @@
             <div class="container">
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
                     <div>
-                        <img src="Assets/network_infrastructure.jpg" alt="Network Infrastructure" style="width: 100%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+                        <img src="Assets/network_infrastructure.jpg" alt="Network Infrastructure"
+                            style="width: 100%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
                     </div>
                     <div>
                         <div class="section-title" style="text-align: left;">
