--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -449,7 +449,7 @@
                                 placeholder="Detailed description of the problem..."></textarea></div>
                         <div class="form-group"><label class="form-label">Attachments</label>
                             <div
-                                style="border: 2px dashed var(--border); padding: 2rem; text-align: center; border-radius: 8px; background: rgba(255,255,255,0.5);">
+                                style="border: 2px dashed var(--border); padding: 2rem; text-align: center; border-radius: 8px; background: var(--bg-body);">
                                 <i class='bx bx-cloud-upload' style="font-size: 2rem; color: var(--primary);"></i>
                                 <p style="color: var(--text-muted);">Drag & drop files here or click to
                                     browse</p>
